objects/UNITY_Asset_History__c.object
<CustomObject>
    <description>UNITY object to capture asset history, including relocating an asset from one location to another</description>
    <fields>
        <fullName>UNITY_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset History</relationshipLabel>
        <relationshipName>Asset_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset History</relationshipLabel>
        <relationshipName>Asset_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Down_Time__c</fullName>
        <description>Capture down time of asset</description>
        <label>Down Time</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNITY_FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Time__c</fullName>
        <description>Captures service time performed on asset</description>
        <label>Service Time</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Cost_Ownership__c</fullName>
        <label>Total Cost Ownership</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Asset History</label>
    <nameField>
        <displayFormat>AH-{000000000}</displayFormat>
        <label>Asset History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>